# PenguinsKarmaBot

./: .gitignore  DOCKERFILE  Dockerfile  README.md  compose.yml  docker-compose.sample.yml  karma.session  karma.session-journal  pyproject.toml  requirements.txt  sample_config.env  start.sh
.github/workflows/: deploy.yaml
Karma/: __init__.py  __main__.py
Karma/plugins/: karma.py  karmaIsAbitch.py  misc.py  start.py
Karma/utils/: dbhelpers.py  filters.py
bot/: __init__.py  __main__.py  custom_filters.py  database.py  models.py
bot/plugins/: karma.py  misc.py  sudoers.py
