[project]
name = "karmabot"
version = "0.1.0"
requires-python = ">=3.10"
description = "A karma bot for Penguins Network."
license = "GPL3"
readme = "README.md"

dependencies = [
    "peewee==3.16.0",
    "pyrogram==2.0.102",
    "pysocks==1.7.1",
    "python-dotenv==1.0.0",
    "python-telegram-bot>=22.5",
    "tgcrypto==1.2.5",
]

