[project]
name = "karmabot"
version = "0.1.0"
requires-python = ">=3.10"
description = "A karma bot for Penguins Network."
license = "GPL3"
readme = "README.md"

dependencies = [
    "hydrogram>=0.2.0",
    "peewee==3.16.0",
    "python-decouple>=3.8",
    "python-dotenv==1.0.0",
    "python-telegram-bot[ext]>=22.5",
    "uvloop>=0.21.0",
]

